--- a/Translate/app/build.gradle
+++ b/Translate/app/build.gradle
@@ -85,9 +85,9 @@ dependencies {
     compile "com.tencent.bugly:crashreport_upgrade:${rootProject.ext.crashreportLibVersion}"
     compile "com.meituan.android.walle:library:${rootProject.ext.walleLibVersion}"
     annotationProcessor "com.jakewharton:butterknife-compiler:${rootProject.ext.butterknifeLibVersion}"
-    compile 'com.android.support:appcompat-v7:25.3.1'
-    compile 'com.android.support:design:25.3.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.android.support:multidex:1.0.1'
     compile 'com.tencent.bugly:nativecrashreport:latest.release'
+    compile 'com.android.support:appcompat-v7:26.0.0-alpha1'
+    compile 'com.android.support:design:26.0.0-alpha1'
 }
