--- a/Translate/app/src/main/AndroidManifest.xml
+++ b/Translate/app/src/main/AndroidManifest.xml
@@ -29,7 +29,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppThemeNoActionBar">
 
         <!-- ShareSdk -->
         <meta-data
@@ -97,9 +97,7 @@
             android:name="com.baidu.speech.VoiceRecognitionService"
             android:exported="false" />
 
-        <activity android:name=".MainActivity">
-
-        </activity>
+        <activity android:name=".MainActivity" />
         <activity android:name=".activitys.BluetoothActivity" />
         <activity android:name=".activitys.BluetoothDeviceManagerActivity" />
         <activity android:name=".activitys.VoiceTranslateActivity" />
@@ -117,6 +115,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".activitys.LoginActivity" />
+        <activity android:name=".activitys.QuestionActivity"></activity>
     </application>
 
 </manifest>
