--- a/Translate/app/build.gradle
+++ b/Translate/app/build.gradle
@@ -90,4 +90,5 @@ dependencies {
     compile 'com.tencent.bugly:nativecrashreport:latest.release'
     compile 'com.android.support:appcompat-v7:26.0.0-alpha1'
     compile 'com.android.support:design:26.0.0-alpha1'
+    compile 'de.hdodenhof:circleimageview:2.1.0'
 }
