--- a/Translate/app/build.gradle
+++ b/Translate/app/build.gradle
@@ -91,4 +91,5 @@ dependencies {
     compile 'com.android.support:appcompat-v7:26.0.0-alpha1'
     compile 'com.android.support:design:26.0.0-alpha1'
     compile 'de.hdodenhof:circleimageview:2.1.0'
+    compile 'com.github.Jay-Goo:WaveLineView:v1.0.3'
 }
