--- a/Translate/app/build.gradle
+++ b/Translate/app/build.gradle
@@ -17,7 +17,7 @@ android {
         multiDexEnabled true
         ndk {
             //设置支持的SO库架构
-            abiFilters 'armeabi', 'armeabi-v7a', 'arm64-v8a', 'x86' , 'x86_64'
+            abiFilters 'armeabi' //, 'armeabi-v7a', 'arm64-v8a', 'x86' , 'x86_64'
         }
     }
 
