--- a/Translate/app/build.gradle
+++ b/Translate/app/build.gradle
@@ -108,6 +108,7 @@ dependencies {
     compile 'de.hdodenhof:circleimageview:2.1.0'
     compile 'com.github.Jay-Goo:WaveLineView:v1.0.3'
     compile 'top.zibin:Luban:1.1.3'
-
+    compile 'com.android.support:support-annotations:26.1.0'
+    compile 'me.drakeet.support:toastcompat:1.0.2'
 
 }
