--- a/Translate/build.gradle
+++ b/Translate/build.gradle
@@ -47,10 +47,8 @@ allprojects {
     repositories {
         jcenter()
         maven { url "https://jitpack.io" }
-        maven {
-            url 'https://dl.bintray.com/hpdx/maven/'
-        }
-
+        maven { url 'https://dl.bintray.com/hpdx/maven/'}
+        maven { url 'https://maven.google.com' }
     }
 }
 
